# fetch-runner

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: deploy.sh  fetch-runner.service  fetch-runner.sudoers  jobs.toml
src/fetch_runner/: __init__.py  __main__.py  cli.py  config.py  git_ops.py  guard.py  locking.py  runner.py
tests/: test_config.py  test_git_ops.py  test_guard.py  test_locking.py  test_runner.py  test_sudoers.py
